gurps4e.css
@import url("https://fonts.googleapis.com/css2?family=Martel:wght@400;800&family=Roboto:wght@300;400;500&display=swap");
/* Global styles */
.window-app {
	font-family: "Roboto", sans-serif;
	font-size: 9pt;
}

.rollable:hover, .rollable:focus, .plus:hover, .minus:hover {
	color: #000;
	text-shadow: 0 0 10px red;
	cursor: pointer;
}

.rollable {
	font-size: large;
}

.inEffect {
	background-color: #88cc88;
}

#sheet {
	display: grid;
	grid-template-rows: 120px 0fr 0fr auto auto;
}

#personal {
	grid-area: personal;
	display: grid;
	grid-template:
		"portrait actorname reserves pointTotals"
		"portrait racegender reserves pointTotals";
	grid-template-columns: 100px 2fr 1fr auto;
	grid-template-rows: 55px 50px;
	grid-gap: 5px;
}

.item-row {
	display: grid;
	grid-template-columns: 24px 4fr 4fr 1fr 1fr 1fr 1fr 1fr 2fr 1fr;
}

.item-row div {
	display: flex;
	align-items: center;
}

#equipmentDetails {
	grid-area: equipmentDetails;
	display: grid;
	grid-template:
			"qty tl lc equipped"
			"value value weight weight"
			"xx sc sc sc";
	grid-template-columns: 1fr 1fr 1fr 1fr;
	/*grid-template-rows: 55px 50px;*/
	grid-gap: 5px;
}

.equipStatusSelect{
	background: rgba(0, 0, 0, 0.05);
	border: 1px solid #7a7971;
	border-radius: 3px;
	padding: 0 3px;
	text-overflow: ellipsis;
	height: unset;
}

.equipmentStat{
	display: grid;
	grid-template-columns: auto 1fr 1fr;
}

.equipmentStatLong{
	display: grid;
	grid-template-columns: auto 1fr auto 1fr;
}

.equipmentInputInput{
	display: grid;
	grid-template-columns: 3fr auto 1fr;
}

.equipmentLabelInput{
	display: grid;
	grid-template-columns: 1fr auto 1fr;
}

.meleeRow {
	display: grid;
	grid-template-columns: 1fr 5fr 1fr 5fr 3fr 3fr 1.5fr 1.5fr 1fr 1fr 1fr 0.5fr;
	border: 1px solid rgba(0, 0, 0, 0.05);
	grid-gap: 5px;
	align-content: center;
	text-align: center;
}

.rangedRow {
	display: grid;
	grid-template-columns: 1fr 5fr 1fr 5fr 1fr 3fr 1.5fr 1.5fr 3fr 1fr 1fr 1fr 1fr 1fr 0.5fr;
	border: 1px solid rgba(0, 0, 0, 0.05);
	grid-gap: 5px;
	align-content: center;
	text-align: center;
}

#qty {
	grid-area: qty;
}

#tl {
	grid-area: tl;
}

#lc {
	grid-area: lc;
}

#subCategory {
	grid-area: sc;
}

#equipped {
	grid-area: equipped;
}

#value {
	grid-area: value;
}

#weight {
	grid-area: weight;
}

#baseSkillRow {
	grid-area: baseSkillRow;
	display: grid;
	grid-template: "baseSkillLabel baseSkillText baseSkillLevel";
	grid-template-columns: 8fr 6fr 2fr;
}

#portrait {
	grid-area: portrait;
	display: grid;
	align-self: center;
}

.portrait {
	min-width: 100px;
	min-height: 100px;
}

#actorname {
	grid-area: actorname;
	display: grid;
	height: 55px;
	font-size: 150%;
	font-weight: bold;
	align-items: center;
}

.charname {
	align-self: center;
	min-height: 50px;
}

.rollable-name {
	border-collapse: unset;
	background: unset;
	border-top: unset;
	border-bottom: unset;
	margin: unset;
}

#racegender {
	grid-area: racegender;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	align-items: center;
}

#pointTotals {
	grid-area: pointTotals;
	display: grid;
	grid-template-rows: repeat(2, 1fr);
}

#secondaryAttributes {
	grid-area: secondaryAttributes;
	display: grid;
	grid-template:
		"hitpoints fatpoints damresist basicmove basicspeed";
	grid-template-columns: repeat(5,auto);
	grid-gap: 5px;
}

#hitpoints {
	grid-area: hitpoints;
}

#fatpoints {
	grid-area: fatpoints;
}

#hitpoints,
#fatpoints {
	display: grid;
	grid-template-rows: repeat(2, auto);
	grid-template-columns: repeat(2, auto);
	border: 2px groove darkgoldenrod;
}

#currmax {
	display: grid;
	grid-template-columns: 36px 0fr 36px;
}

#damresist {
	grid-area: damresist;
	min-width: 36px;
}

#basicmove {
	grid-area: basicmove;
	min-width: 56px;
}

#basicspeed {
	grid-area: basicspeed;
	min-width: 56px;
}

#basicspeed,
#basicmove,
#damresist {
	display: grid;
	grid-template-rows: repeat(2, auto);
	border: 2px groove darkgoldenrod;
}

#tabselect {
	display: grid;
	grid-template-columns: repeat(7,0fr);
	border-top: 2px groove darkgoldenrod;
}

#modifiers {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	border-top: 2px groove darkgoldenrod;
}

#primary-attributes {
	display: grid;
	grid-template-columns: repeat(9,auto);
	border-top: 2px groove darkgoldenrod;
}

#checks {
	display: grid;
	grid-template-columns: repeat(9,auto);
	border-top: 2px groove darkgoldenrod;
}

#attributes_defences {
	display: grid;
	grid-template-columns: repeat(9,1fr);
	border-top: 2px groove darkgoldenrod;
}

.global-modifier {
	display: grid;
	padding: 2px;
	margin: 1px;
	justify-items: center;
	border-left: 2px groove darkgoldenrod;
	border-right: 2px groove darkgoldenrod;
	background-color: #d8e8D8;
}

.defensive-modifier {
	display: grid;
	padding: 2px;
	margin: 1px;
	justify-items: center;
	background-color: #e8d8D8;
}

#attacks {
	display: grid;
	grid-template-columns: repeat(2,1fr);
	border-top: 2px groove darkgoldenrod;
}

#skills {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	border-top: 2px groove darkgoldenrod;
}

.encumbranceTable {
	display: grid;
	grid-template-columns: 2fr 6fr;
	padding: 2px;
	border: 1px dotted grey;
	margin: 1px;
}

.combat-table {
	margin-left: 5px;
}

.combat-table td {
	padding: 2px;
}

#attribute-block {
	grid-area: attribute-block;
	display: grid;
	grid-template-areas: 	"stHeader 	dxHeader 	iqHeader 	htHeader"
							"st 		dx 			iq 			ht"
							"lst 		speed 		per			hts"
							"sst 		move 		will		htk"
							"kb			dodge 		fr			z1"
							"z2			z3			senses		z1";
	grid-template-columns: repeat(4,auto);
	grid-gap: 5px;
}

.reserves-block {

}

.pointTotal {

}

.unspentEntry {
	width: 5ch !important;
}

.atrVal {
	width: 5ch !important;
}

.senseVal {
	width: 15ch !important;
}

.senseMod {
	width: 2ch !important;
}

.attack {
	display: grid;
	grid-template-columns: 1fr auto auto 32px;
	gap: 2px;
	padding: 2px;
	border: 1px dotted grey;
	margin: 1px;
	width: 100%;
}
/* ... */

